@@ -1,8 +1,0 @@
-;
-; $Id$
-;
-
-[common]
-
-[transport_impl_1]
-transport_type=SimpleTcp
