@@ -1,3 +1,9 @@
+Fri Sep 18 19:29:46 UTC 2009  Steven Stallion  <stallions@ociweb.com>
+
+        * DevGuideExamples
+
+          DevGuideExamples updates.
+
 Fri Sep 18 16:20:54 UTC 2009  Steven Stallion  <stallions@ociweb.com>
 
         * DevGuideExamples/DCPS/Messenger/DataReaderListenerImpl.h:
